<resources>
    <string name="app_name">SiTepat</string>
    <string name="default_web_client_id">1037903149990-uk6k46kj6a0fo7fjbh3go8vklbav757m.apps.googleusercontent.com</string>
    <string name="default_web_client_secret">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</string>
    <string name="please_wait">Please Wait …</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="aboutus">About Us</string>
    <string name="search_articles">Search articles ...</string>
    <string name="search_brand">Search brand ...</string>
    <string name="search_type">Search type ...</string>
    <string name="search_news">Search news ...</string>
    <string name="select_brand">Select brand</string>
    <string name="select_type">Select type</string>
    <string name="hi">Hi,</string>
    <string name="author">Author : </string>
    <string name="video">Video</string>
    <string name="starting_maintaining">Starting maintaining your Motorcycle!</string>
    <string name="explore_hire">Explore hire!</string>
    <string name="our_best_promo">Our Best Promo!</string>
    <string name="protection_from_disasters">Protection from disasters!</string>
    <string name="walkthrough_title">Lorem Ipsum is Simple Dummy Text</string>
    <string name="article_home">Article!</string>
    <string name="news">News</string>
    <string name="news_home">News!</string>
    <string name="see_more">See more</string>
    <string name="see_all">See all</string>
    <string name="new_product">New Product</string>
    <string name="popular_article">Popular Article!</string>
    <string name="toast_onfailure">"Network Failure :( please try again later"</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="product_for_you">Product for you!</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="type_email_add">Type e-mail address</string>
    <string name="type_phone_number">Type phone number</string>
    <string name="password">Password</string>
    <string name="type_password">Type password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_ques">Forgot password?</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sub_total">Sub Total</string>
    <string name="ppn">PPN 10%</string>
    <string name="total">Total</string>
    <string name="total_after_tax">Total After Tax</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="register_account">Register Account</string>
    <string name="fill_your_detail">Fill your detail or continue with social media</string>
    <string name="fullname">Fullname</string>
    <string name="type_your_name">Type your name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="type_email_phone">Type e-mail / phone number</string>
    <string name="email_phone">E-mail / phone number</string>
    <string name="con">Continue</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend_code">Resend Code</string>
    <string name="did_not_receive">Did not receive the code?</string>
    <string name="please_create_password">Please Create new Password</string>
    <string name="desc_forgot">Enter the registered email/ phone number. We will send you a verification code to reset your password.</string>
    <string name="desc_send_6_digit">We have sent a 6 digit code to  **** **** **86. Please input code here!.</string>
    <string name="setting">Setting</string>
    <string name="getting_started">Getting Started</string>
    <string name="term_condition">Term &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification</string>
    <string name="point_history">Point History</string>
    <string name="my_poin">My Point</string>
    <string name="my_bike">My Motorcycle</string>
    <string name="customer_survey">Customer Survey</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="detail_bike">Detail Motorcycle</string>
    <string name="service_record">Service Record</string>
    <string name="edit">Edit</string>
    <string name="add_new">Add New</string>
    <string name="open_now">Open Now</string>
    <string name="reedem">Reedem</string>
    <string name="service_records">SERVICE RECORDS</string>
    <string name="nothing_service_records">Tidak ada service record</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="addresses">Address</string>
    <string name="save">Save</string>
    <string name="save_address">Save Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_car">New Motorcycle</string>
    <string name="edit_car">Edit Motorcycle</string>
    <string name="save_car">Save Motorcycle</string>
    <string name="photo">Photo</string>
    <string name="car_name_type_model">Motorcycle name, type or model</string>
    <string name="no_plate">No. Plate</string>
    <string name="police_number">Police number</string>
    <string name="year">Year</string>
    <string name="year_production">Year production</string>
    <string name="color">Color</string>
    <string name="car_color">Motorcycle color</string>
    <string name="cc">Cc</string>
    <string name="car_cc">Motorcycle cc</string>
    <string name="add_car">Add Motorcycle</string>
    <string name="amount">Amount</string>
    <string name="service">Service</string>
    <string name="delete_detail">Are you sure? If it delete, data motorcycle will be deleted from this device.</string>
    <string name="delete_product_detail">Are you sure delete this product?</string>
    <string name="outlet">Outlet</string>
    <string name="myaccount">My Account</string>
    <string name="carmonitoring">Service</string>
    <string name="car">Motorcycle</string>
    <string name="monitoring">Monitoring</string>
    <string name="myorders">My Orders</string>
    <string name="shop">Shop</string>
    <string name="article">Article</string>
    <string name="what_do_u_want">What do you want to get started?</string>
    <string name="term">Term &amp; Conditions\nSiTepat</string>
    <string name="privacy">Privacy Policy\nSiTepat</string>
    <string name="logout_detail">Are you sure? If it logout, all SiTepat data will be deleted from this device.</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="support_form">Support Form</string>
    <string name="type_complaint">Type Complaint</string>
    <string name="detail_complaint">Detail Complaint</string>
    <string name="complaint">Complaint</string>
    <string name="input_hire">Input here</string>
    <string name="send_btn">Send</string>
    <string name="thanks_done">Thank’s for your support</string>
    <string name="promo">Promo</string>
    <string name="periode_promo">Periode Promo</string>
    <string name="detail_promo">Detail Promo</string>
    <string name="check_ur_point">Check Your Point</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_outlet">Search outlet ...</string>
    <string name="search_product">Search product ...</string>
    <string name="detail_outlet">Detail Outlet</string>
    <string name="current_password">Current Password</string>
    <string name="type_current_password">Type current password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="min_8_character">Min 8 character</string>
    <string name="update_password">Update Password</string>
    <string name="facebook_app_id">569377241730391</string>
    <string name="fb_login_protocol_scheme">fb569377241730391</string>
    <string name="facebook_client_token">9200dd9133caf57670236e668d3f6d59</string>
    <string name="booking_service">Booking Service</string>
    <string name="home_service">Home Service</string>
    <string name="body">Body &amp; Paint</string>
    <string name="bike">Motorcycle</string>
    <string name="period">Periodic Service</string>
    <string name="repair">General Repair</string>
    <string name="estimation">Estimation</string>
    <string name="price_estimation">Price estimation</string>
    <string name="service_time">Service time estimation</string>
    <string name="previous">Previous</string>
    <string name="select">Select</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="hp">Handphone</string>
    <string name="promo_code">Promo Code</string>
    <string name="text_fullname">Input your fullname</string>
    <string name="text_hp">Input your phone number</string>
    <string name="text_email">Input your email</string>
    <string name="apply">APPLY</string>
    <string name="book_now">Book Now</string>
    <string name="input_address">Input your address</string>
    <string name="note">Note</string>
    <string name="number_home">Number or level home</string>
    <string name="insurance">Insurance Ownership</string>
    <string name="spk_available">SPK Available</string>
    <string name="service_required">Service Required</string>
    <string name="province">Province</string>
    <string name="select_province">Select province</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="select_outlet">Select Outlet</string>
    <string name="select_type_complaint">Select Type Complaint</string>
    <string name="select_detail_complaint">Select Detail Complaint</string>
    <string name="empty_service">No service added, please add before.</string>
    <string name="add_service">Add Service</string>
    <string name="location">Location</string>
    <string name="bikeservice">Motorcycle &amp; Service</string>
    <string name="booking_time">Booking Time</string>
    <string name="your_information">Your Information</string>
    <string name="outlet_time">Outlet Time</string>
    <string name="on_going">On Going</string>
    <string name="finished">Finished</string>
    <string name="all">All</string>
    <string name="purchase">Purchase</string>
    <string name="total_price">Total price : </string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="total_product_price">Total product price</string>
    <string name="discount">Discount</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact">Contact</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="ban">Ban</string>
    <string name="oli">Oli</string>
    <string name="aki">Aki</string>
    <string name="aksesoris">Aksesoris</string>
    <string name="variant">Variant</string>
    <string name="description">Description</string>
    <string name="outlet_information">Outlet Information</string>
</resources>