<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".page.shop.BottomSheetOutlet"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="16dp"
                android:src="@drawable/ic_close_button"
                android:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/outlet_information"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/province"
            android:fontFamily="@font/rajdhani_regular"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_title"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_province"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_edittext_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_14sdp"
            android:maxLines="1"
            android:fontFamily="@font/rajdhani_medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/select_province"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:fontFamily="@font/rajdhani_regular"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_title"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_edittext_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_14sdp"
            android:maxLines="1"
            android:fontFamily="@font/rajdhani_medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/select_city"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/outlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/outlet"
            android:fontFamily="@font/rajdhani_regular"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_title"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_outlet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_edittext_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_14sdp"
            android:maxLines="1"
            android:fontFamily="@font/rajdhani_medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/select_outlet"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:fontFamily="@font/rajdhani_regular"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_title"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_edittext_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_14sdp"
            android:maxLines="1"
            android:fontFamily="@font/rajdhani_medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableEnd="@drawable/ic_calendar"
            android:textStyle="bold"
            android:hint="@string/select_date"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/time"
            android:fontFamily="@font/rajdhani_regular"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_title"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_edittext_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/gray_text"
            android:textSize="@dimen/_14sdp"
            android:maxLines="1"
            android:fontFamily="@font/rajdhani_medium"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:drawableEnd="@drawable/ic_clock"
            android:textStyle="bold"
            android:hint="@string/select_time"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/background_button_orange"
        android:text="@string/save"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/rajdhani_semi_bold"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>