<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".page.service.booking_service.fragment.YourInformationFragment"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lay_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/fullname"
                android:textColor="@color/grey_title"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/background_edittext_grey"
                android:fontFamily="@font/rajdhani_medium"
                android:hint="@string/text_fullname"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/hp"
                android:textColor="@color/grey_title"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/background_edittext_grey"
                android:fontFamily="@font/rajdhani_medium"
                android:hint="@string/text_hp"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/email"
                android:textColor="@color/grey_title"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/background_edittext_grey"
                android:fontFamily="@font/rajdhani_medium"
                android:hint="@string/text_email"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/promo_code"
                android:textColor="@color/grey_title"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:orientation="horizontal"
                android:background="@drawable/background_edittext_grey">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/promo_code"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/rajdhani_medium"
                    android:hint="@string/promo_code"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/gray_text"
                    android:textSize="@dimen/_14sdp"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textVisiblePassword"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_apply_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:paddingEnd="@dimen/_10sdp"
                    android:fontFamily="@font/rajdhani_bold"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/gray_text"
                    android:visibility="visible"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_apply_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:paddingEnd="@dimen/_10sdp"
                    android:fontFamily="@font/rajdhani_bold"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/red_text"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/lay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view">

        <TextView
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/background_button_orange_outline"
            android:fontFamily="@font/rajdhani_medium"
            android:gravity="center"
            android:text="@string/previous"
            android:textColor="@color/red_text"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/btn_book_now"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/background_button_orange"
            android:fontFamily="@font/rajdhani_medium"
            android:gravity="center"
            android:text="@string/book_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>