<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    tools:context=".page.service.home_service.fragment.BookingTimeFragmentHome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/date"
                android:textColor="@color/grey_title"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/select_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/background_edittext_grey"
                android:drawableEnd="@drawable/ic_calendar"
                android:fontFamily="@font/rajdhani_medium"
                android:hint="@string/select_date"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_14sdp"
                android:enabled="false"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/time"
                android:textColor="@color/grey_title"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/select_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/background_edittext_grey"
                android:drawableEnd="@drawable/ic_clock"
                android:fontFamily="@font/rajdhani_medium"
                android:hint="@string/select_time"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/_14sdp"
                android:enabled="false"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>